// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`display math custom delimiters does not render default delimiters 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 12,
              "line": 1,
              "offset": 11,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "text before",
        },
      ],
      "position": {
        "end": {
          "column": 12,
          "line": 1,
          "offset": 11,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 20,
              "line": 3,
              "offset": 32,
            },
            "start": {
              "column": 1,
              "line": 3,
              "offset": 13,
            },
          },
          "type": "text",
          "value": "$$a^2 + b^2 = c^2$$",
        },
      ],
      "position": {
        "end": {
          "column": 20,
          "line": 3,
          "offset": 32,
        },
        "start": {
          "column": 1,
          "line": 3,
          "offset": 13,
        },
      },
      "type": "paragraph",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 11,
              "line": 5,
              "offset": 44,
            },
            "start": {
              "column": 1,
              "line": 5,
              "offset": 34,
            },
          },
          "type": "text",
          "value": "text after",
        },
      ],
      "position": {
        "end": {
          "column": 11,
          "line": 5,
          "offset": 44,
        },
        "start": {
          "column": 1,
          "line": 5,
          "offset": 34,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 1,
      "line": 6,
      "offset": 45,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`display math custom delimiters renders math delimited by custom delimiters 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 12,
              "line": 1,
              "offset": 11,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "text before",
        },
      ],
      "position": {
        "end": {
          "column": 12,
          "line": 1,
          "offset": 11,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 22,
              "line": 3,
              "offset": 34,
            },
            "start": {
              "column": 1,
              "line": 3,
              "offset": 13,
            },
          },
          "type": "text",
          "value": "!!!a^2 + b^2 = c^2!!!",
        },
      ],
      "position": {
        "end": {
          "column": 22,
          "line": 3,
          "offset": 34,
        },
        "start": {
          "column": 1,
          "line": 3,
          "offset": 13,
        },
      },
      "type": "paragraph",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 11,
              "line": 5,
              "offset": 46,
            },
            "start": {
              "column": 1,
              "line": 5,
              "offset": 36,
            },
          },
          "type": "text",
          "value": "text after",
        },
      ],
      "position": {
        "end": {
          "column": 11,
          "line": 5,
          "offset": 46,
        },
        "start": {
          "column": 1,
          "line": 5,
          "offset": 36,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 1,
      "line": 6,
      "offset": 47,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`display math default delimiters does not render without whitespace 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 30,
              "line": 1,
              "offset": 29,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "hello$$a^2 + b^2 = c^2$$world",
        },
      ],
      "position": {
        "end": {
          "column": 30,
          "line": 1,
          "offset": 29,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 30,
      "line": 1,
      "offset": 29,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`display math default delimiters renders alone 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 20,
              "line": 1,
              "offset": 19,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "$$a^2 + b^2 = c^2$$",
        },
      ],
      "position": {
        "end": {
          "column": 20,
          "line": 1,
          "offset": 19,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 20,
      "line": 1,
      "offset": 19,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`display math default delimiters renders at beginning 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 20,
              "line": 1,
              "offset": 19,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "$$a^2 + b^2 = c^2$$",
        },
      ],
      "position": {
        "end": {
          "column": 20,
          "line": 1,
          "offset": 19,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 13,
              "line": 3,
              "offset": 33,
            },
            "start": {
              "column": 3,
              "line": 3,
              "offset": 23,
            },
          },
          "type": "text",
          "value": "text after",
        },
      ],
      "position": {
        "end": {
          "column": 13,
          "line": 3,
          "offset": 33,
        },
        "start": {
          "column": 3,
          "line": 3,
          "offset": 23,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 3,
      "line": 4,
      "offset": 36,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`display math default delimiters renders at end of text 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 22,
              "line": 2,
              "offset": 33,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "text before
$$a^2 + b^2 = c^2$$",
        },
      ],
      "position": {
        "end": {
          "column": 22,
          "line": 2,
          "offset": 33,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 22,
      "line": 2,
      "offset": 33,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`display math default delimiters renders surrounded by text 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 12,
              "line": 1,
              "offset": 11,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "text before",
        },
      ],
      "position": {
        "end": {
          "column": 12,
          "line": 1,
          "offset": 11,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 20,
              "line": 3,
              "offset": 32,
            },
            "start": {
              "column": 1,
              "line": 3,
              "offset": 13,
            },
          },
          "type": "text",
          "value": "$$a^2 + b^2 = c^2$$",
        },
      ],
      "position": {
        "end": {
          "column": 20,
          "line": 3,
          "offset": 32,
        },
        "start": {
          "column": 1,
          "line": 3,
          "offset": 13,
        },
      },
      "type": "paragraph",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 11,
              "line": 5,
              "offset": 44,
            },
            "start": {
              "column": 1,
              "line": 5,
              "offset": 34,
            },
          },
          "type": "text",
          "value": "text after",
        },
      ],
      "position": {
        "end": {
          "column": 11,
          "line": 5,
          "offset": 44,
        },
        "start": {
          "column": 1,
          "line": 5,
          "offset": 34,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 1,
      "line": 6,
      "offset": 45,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`display math default delimiters renders without surrounding blank lines 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 11,
              "line": 3,
              "offset": 42,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "text before
$$a^2 + b^2 = c^2$$
text after",
        },
      ],
      "position": {
        "end": {
          "column": 11,
          "line": 3,
          "offset": 42,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 1,
      "line": 4,
      "offset": 43,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`display math default delimiters sanitizes HTML inside 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 12,
              "line": 1,
              "offset": 11,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "text before",
        },
      ],
      "position": {
        "end": {
          "column": 12,
          "line": 1,
          "offset": 11,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 4,
              "line": 3,
              "offset": 16,
            },
            "start": {
              "column": 1,
              "line": 3,
              "offset": 13,
            },
          },
          "type": "text",
          "value": "$$a",
        },
        {
          "position": {
            "end": {
              "column": 12,
              "line": 3,
              "offset": 24,
            },
            "start": {
              "column": 4,
              "line": 3,
              "offset": 16,
            },
          },
          "type": "html",
          "value": "<script>",
        },
        {
          "position": {
            "end": {
              "column": 26,
              "line": 3,
              "offset": 38,
            },
            "start": {
              "column": 12,
              "line": 3,
              "offset": 24,
            },
          },
          "type": "text",
          "value": "alert('hello')",
        },
        {
          "position": {
            "end": {
              "column": 35,
              "line": 3,
              "offset": 47,
            },
            "start": {
              "column": 26,
              "line": 3,
              "offset": 38,
            },
          },
          "type": "html",
          "value": "</script>",
        },
        {
          "position": {
            "end": {
              "column": 37,
              "line": 3,
              "offset": 49,
            },
            "start": {
              "column": 35,
              "line": 3,
              "offset": 47,
            },
          },
          "type": "text",
          "value": "$$",
        },
      ],
      "position": {
        "end": {
          "column": 37,
          "line": 3,
          "offset": 49,
        },
        "start": {
          "column": 1,
          "line": 3,
          "offset": 13,
        },
      },
      "type": "paragraph",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 11,
              "line": 5,
              "offset": 61,
            },
            "start": {
              "column": 1,
              "line": 5,
              "offset": 51,
            },
          },
          "type": "text",
          "value": "text after",
        },
      ],
      "position": {
        "end": {
          "column": 11,
          "line": 5,
          "offset": 61,
        },
        "start": {
          "column": 1,
          "line": 5,
          "offset": 51,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 1,
      "line": 6,
      "offset": 62,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;
